<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StockSentinel</string>
    <string name="tab_home">Home</string>
    <string name="tab_stocks">Stocks</string>
    <string name="tab_dividends">Dividends</string>
    <string name="tab_ipos">IPOs</string>
    <string name="tab_news">News</string>
    <string name="tab_watchlist">Watchlist</string>
    <string name="search_hint">Search 13,000+ stocks…</string>
    <string name="no_data">No data available</string>
    <string name="loading">Loading…</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="watchlist">Watchlist</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove</string>
</resources>
