<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/stocksFragment"
        android:icon="@drawable/ic_stocks"
        android:title="@string/tab_stocks" />
    <item
        android:id="@+id/dividendsFragment"
        android:icon="@drawable/ic_dividends"
        android:title="@string/tab_dividends" />
    <item
        android:id="@+id/iposFragment"
        android:icon="@drawable/ic_ipo"
        android:title="@string/tab_ipos" />
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/tab_news" />
</menu>
